{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 22,
  "lineage": "249032e3-8c89-547a-9f11-8bcce728d791",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069141233:internet-gateway/igw-0c981f0a4bce05fbf",
            "id": "igw-0c981f0a4bce05fbf",
            "owner_id": "816069141233",
            "tags": {
              "Name": "notes-app-igw"
            },
            "tags_all": {
              "Name": "notes-app-igw"
            },
            "vpc_id": "vpc-03963fc02224d0512"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069141233:route-table/rtb-0e5f12e01fd8dff42",
            "id": "rtb-0e5f12e01fd8dff42",
            "owner_id": "816069141233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c981f0a4bce05fbf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "notes-app-public-rt"
            },
            "tags_all": {
              "Name": "notes-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03963fc02224d0512"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e9dff73cf6ed970",
            "route_table_id": "rtb-0e5f12e01fd8dff42",
            "subnet_id": "subnet-023e75c596c5bccb0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077d8489ece8fc844",
            "route_table_id": "rtb-0e5f12e01fd8dff42",
            "subnet_id": "subnet-0c32e38d8db53d462"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069141233:security-group/sg-05ca6da17a3b3a64b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ca6da17a3b3a64b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "notes-app-backend-sg",
            "name_prefix": "",
            "owner_id": "816069141233",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "notes-app-backend-sg"
            },
            "tags_all": {
              "Name": "notes-app-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03963fc02224d0512"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069141233:security-group/sg-09b9b02676b9706a0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b9b02676b9706a0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05ca6da17a3b3a64b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "notes-app-rds-sg",
            "name_prefix": "",
            "owner_id": "816069141233",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "notes-app-rds-sg"
            },
            "tags_all": {
              "Name": "notes-app-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03963fc02224d0512"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069141233:subnet/subnet-07c49c64d3d7cab60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c49c64d3d7cab60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069141233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "notes-app-private-0"
            },
            "tags_all": {
              "Name": "notes-app-private-0"
            },
            "vpc_id": "vpc-03963fc02224d0512"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069141233:subnet/subnet-0b1973c73daaf5418",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1973c73daaf5418",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069141233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "notes-app-private-1"
            },
            "tags_all": {
              "Name": "notes-app-private-1"
            },
            "vpc_id": "vpc-03963fc02224d0512"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069141233:subnet/subnet-023e75c596c5bccb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023e75c596c5bccb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069141233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "notes-app-public-0"
            },
            "tags_all": {
              "Name": "notes-app-public-0"
            },
            "vpc_id": "vpc-03963fc02224d0512"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069141233:subnet/subnet-0c32e38d8db53d462",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c32e38d8db53d462",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069141233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "notes-app-public-1"
            },
            "tags_all": {
              "Name": "notes-app-public-1"
            },
            "vpc_id": "vpc-03963fc02224d0512"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:816069141233:vpc/vpc-03963fc02224d0512",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eebc7bab10c4a026",
            "default_route_table_id": "rtb-0eadc5d19996984c4",
            "default_security_group_id": "sg-0b874f08bf9ca8342",
            "dhcp_options_id": "dopt-0460d40ec2bafe1ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03963fc02224d0512",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eadc5d19996984c4",
            "owner_id": "816069141233",
            "tags": {
              "Name": "notes-app-vpc"
            },
            "tags_all": {
              "Name": "notes-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}